--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ pluginGroup = com.obiscr.chatgpt
 pluginName = ChatGPT
 
 # SemVer format -> https://semver.org
-pluginVersion = 1.0.1
+pluginVersion = 1.0.2
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
@@ -21,7 +21,7 @@ pluginUntilBuild = 223.*
 # 'RD' - Rider.
 # 'GO' - GoLand.
 # 'JPS' - JPS-only.
-platformType = IU
+platformType = PC
 platformVersion = 2022.3
 platformDownloadSources = true
 
