--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>ChatGPT</id>
   <name>ChatGPT</name>
-  <version>1.0.1</version>
+  <version>1.0.2</version>
   <vendor email="wuzi@obiscr.com" url="https://obiscr.com">obiscr</vendor>
 
   <description><![CDATA[
@@ -11,6 +11,12 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <p>1.0.2</p>
+      <b>备注：新增了一个国内源（默认），不需要Token，直接使用。或者国内用户访问慢的情况下可以尝试切换到默认源。</b>
+      <ul>
+        <li>Added new server sources（增加了新的服务器源（不需要Token））</li>
+        <li>Support for customizable backend servers（支持自定义服务器API）</li>
+      </ul><br>
       <p>1.0.1</p>
       <ul>
         <li>Support quick setting of Access Token（支持快速设置Access Token）</li>
