Rollback the test ide

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ pluginUntilBuild = 223.*
 # 'RD' - Rider.
 # 'GO' - GoLand.
 # 'JPS' - JPS-only.
-platformType = PC
+platformType = IU
 platformVersion = 2022.3
 platformDownloadSources = true
 
