--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -6,7 +6,9 @@ action.refresh.automatic.text=Automatic setting
 notify.config.title=ChatGPT: Config Initialization
 notify.config.text=Please Set the Access Token
 notify.response.title=ChatGPT: Token has expired
-notify.response.text=Please refresh the Access Token
+notify.response.text=The source token you are running on has expired
+notify.timeout.error.title=ChatGPT: Connection timeout
+notify.timeout.error.text=The connection to the remote server timed out
 
 setting.access.token.label=Access token:
 setting.menu.text=ChatGPT
