--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -7,8 +7,10 @@ notify.config.title=ChatGPT: Config Initialization
 notify.config.text=Please Set the Access Token
 notify.response.title=ChatGPT: Token has expired
 notify.response.text=The source token you are running on has expired
-notify.timeout.error.title=ChatGPT: Connection timeout
+notify.timeout.error.title=ChatGPT: Read timed out
 notify.timeout.error.text=The connection to the remote server timed out
+notify.too_many_request.error.title=ChatGPT: Too many requests
+notify.too_many_request.error.text=Too many requests, please slow down
 
 setting.access.token.label=Access token:
 setting.menu.text=ChatGPT
