--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -2,15 +2,39 @@ group.id=ChatGPT Notification Group
 
 action.refresh.manually.text=Manual setting
 action.refresh.automatic.text=Automatic setting
+action.refresh=Reset Thread
+action.settings=Settings
+
+toolwindows.content.search=Search
 
 notify.config.title=ChatGPT: Config Initialization
 notify.config.text=Please Set the Access Token
 notify.response.title=ChatGPT: Token has expired
-notify.response.text=The source token you are running on has expired
+notify.response.text=The token for the URL origin you are running has expired
 notify.timeout.error.title=ChatGPT: Read timed out
 notify.timeout.error.text=The connection to the remote server timed out
 notify.too_many_request.error.title=ChatGPT: Too many requests
 notify.too_many_request.error.text=Too many requests, please slow down
 
-setting.access.token.label=Access token:
-setting.menu.text=ChatGPT
+ui.toolwindow.send=Send
+ui.setting.menu.text=ChatGPT
+ui.setting.url.title=URL Settings
+ui.setting.url.default.label=默认
+ui.setting.url.default.remark=国内用户直接选择此项
+ui.setting.url.official.label=Official
+ui.setting.url.official.remark=This option is to use the official URL.
+ui.setting.url.official.token.label=Access token:
+ui.setting.url.official.token.empty_text=Login Open AI, access https://chat.openai.com/api/auth/session
+ui.setting.url.customize.label=Customize
+ui.setting.url.customize.remark=If you have your own backend server, you can fill in your API address here.
+ui.setting.url.customize.url.label=URL:
+ui.setting.url.customize.url.empty_text=Set your own server URL
+ui.setting.url.cloudflare.label=Cloudflare
+ui.setting.url.cloudflare.remark=Use the cloudflare service.
+ui.setting.url.cloudflare.url.label=URL:
+ui.setting.url.cloudflare.url.empty_text=Set the Cloudflare Workers domain
+ui.setting.connection.title=Connection Settings
+ui.setting.connection.read_timeout.label=Read Timeout (ms):
+ui.setting.connection.read_timeout.empty_text=10 seconds by default
+ui.setting.connection.connection_timeout.label=Connection Timeout (ms):
+ui.setting.connection.connection_timeout.empty_text=10 seconds by default
