--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>ChatGPT</id>
   <name>ChatGPT</name>
-  <version>1.0.4</version>
+  <version>1.0.5</version>
   <vendor email="wuzi@obiscr.com" url="https://obiscr.com">obiscr</vendor>
 
   <description><![CDATA[
@@ -11,6 +11,10 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <p>1.0.5</p>
+      <ul>
+        <li>Fix the problem that the context is not associated（修复上下文不关联的问题）</li>
+      </ul><br>
       <p>1.0.4</p>
       <ul>
         <li>Add timeout notification（添加超时通知）</li>
