--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -8,9 +8,11 @@ action.settings=Settings
 toolwindows.content.search=Search
 
 notify.config.title=ChatGPT: Config Initialization
-notify.config.text=Please Set the Access Token
-notify.response.title=ChatGPT: Token has expired
-notify.response.text=The token for the URL origin you are running has expired
+notify.config.text=Please configure ChatGPT first
+notify.common.error.title=ChatGPT: Request server error
+notify.common.error.text=Http response code: {0}, response message: {1}
+notify.token_expired.error.title=ChatGPT: Token has expired
+notify.token_expired.error.text=The token for the URL origin you are running has expired
 notify.timeout.error.title=ChatGPT: Read timed out
 notify.timeout.error.text=The connection to the remote server timed out
 notify.too_many_request.error.title=ChatGPT: Too many requests
@@ -35,6 +37,8 @@ ui.setting.url.cloudflare.url.label=URL:
 ui.setting.url.cloudflare.url.empty_text=Set the Cloudflare Workers domain
 ui.setting.connection.title=Connection Settings
 ui.setting.connection.read_timeout.label=Read Timeout (ms):
+ui.setting.connection.read_timeout.remark=Time for reading data from the server.
 ui.setting.connection.read_timeout.empty_text=10 seconds by default
 ui.setting.connection.connection_timeout.label=Connection Timeout (ms):
+ui.setting.connection.connection_timeout.remark=Time for establishing a connection with the server.
 ui.setting.connection.connection_timeout.empty_text=10 seconds by default
