Create new branch for 2022.2 ~ 2022.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,11 @@ pluginGroup = com.obiscr.chatgpt
 pluginName = ChatGPT
 
 # SemVer format -> https://semver.org
-pluginVersion = 1.0.5
+pluginVersion = 1.0.6-222.223
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 203
+pluginSinceBuild = 222.2680.4
 pluginUntilBuild = 223.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
