--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -5,6 +5,14 @@ action.refresh.automatic.text=Automatic setting
 action.refresh=Reset Thread
 action.settings=Settings
 action.open_online_chatgpt=Open Online ChatGPT
+action.code.optimize.menu=Optimize code
+action.code.optimize.text=Optimize this code:\n{0}
+action.code.test.menu=Add a test case
+action.code.test.text=Add a test case for code:\n{0}
+action.code.wrong.menu=Find wrong
+action.code.wrong.text=Why is the code wrong?\n{0}
+action.code.explain.menu=Explain code
+action.code.explain.text=Explain this code:\n{0}
 
 toolwindows.content.search=Search
 toolwindows.content.online=Online ChatGPT
