Major update: UI redesign, Use the official GPT 3.5 Turbo model

--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -5,13 +5,15 @@ action.refresh.automatic.text=Automatic setting
 action.refresh=Reset Thread
 action.settings=Settings
 action.open_online_chatgpt=Open Online ChatGPT
-action.code.optimize.menu=Optimize code
+action.gift=Activities
+action.plugins=More Plugins from Author
+action.code.optimize.menu=Optimize Code
 action.code.optimize.text=Optimize this code:\n{0}
-action.code.test.menu=Add a test case
+action.code.test.menu=Add a Test Case
 action.code.test.text=Add a test case for code:\n{0}
-action.code.wrong.menu=Find wrong
+action.code.wrong.menu=Find Wrong
 action.code.wrong.text=Why is the code wrong?\n{0}
-action.code.explain.menu=Explain code
+action.code.explain.menu=Explain Code
 action.code.explain.text=Explain this code:\n{0}
 
 toolwindows.content.search=Search
@@ -27,16 +29,20 @@ notify.timeout.error.title=ChatGPT: Read timed out
 notify.timeout.error.text=The connection to the remote server timed out
 notify.too_many_request.error.title=ChatGPT: Too many requests
 notify.too_many_request.error.text=Too many requests, please slow down
+notify.unavailable.title=ChatGPT: This service is temporarily unavailable
+notify.unavailable.text=Temporarily unavailable, it is recommended to use the official source
 
 ui.toolwindow.send=Send
 ui.setting.menu.text=ChatGPT
 ui.setting.url.title=URL Settings
-ui.setting.url.default.label=默认
-ui.setting.url.default.remark=国内用户直接选择此项
+ui.setting.url.default.label=Default
+ui.setting.url.default.remark=Temporarily unavailable, it is recommended to use the official source
+ui.setting.url.default.token.label=API Key:
+ui.setting.url.default.token.empty_text=Fill in the API Key
 ui.setting.url.official.label=Official
-ui.setting.url.official.remark=This option is to use the official URL
-ui.setting.url.official.token.label=Access token:
-ui.setting.url.official.token.empty_text=Login Open AI, access https://chat.openai.com/api/auth/session
+ui.setting.url.official.remark=This option is to use the official URL. Email and password will only be saved locally and will not be stored in the cloud, please feel free to use them.
+ui.setting.url.official.token.label=API Key:
+ui.setting.url.official.token.empty_text=Login Open AI, access https://beta.openai.com/account/api-keys
 ui.setting.url.customize.label=Customize
 ui.setting.url.customize.remark=If you have your own backend server, you can fill in your API address here
 ui.setting.url.customize.url.label=URL:
@@ -52,3 +58,5 @@ ui.setting.connection.read_timeout.empty_text=10 seconds by default
 ui.setting.connection.connection_timeout.label=Connection Timeout (ms):
 ui.setting.connection.connection_timeout.remark=Time for establishing a connection with the server
 ui.setting.connection.connection_timeout.empty_text=10 seconds by default
+ui.jcef.not_support=The current IDE does not support online Chat GPT, please try to upgrade to the latest version. \n\n(Note: Android Studio is temporarily unavailable due to official issues(Not supported JECF). Need to wait for Android Studio official to fix it.)
+ui.conversation.me=Me
