--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>ChatGPT</id>
   <name>ChatGPT</name>
-  <version>1.0.8-222.223</version>
+  <version>2.1.1-222.223</version>
   <vendor email="wuzi@obiscr.com" url="https://obiscr.com">obiscr</vendor>
 
   <description><![CDATA[
@@ -11,6 +11,53 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <p>2.1.1-222.223</p>
+      <ul>
+        <li>Fix some issues</li>
+      </ul><br>
+      <p>2.1.0-222.223</p>
+      <b>Added</b>
+      <ul>
+        <li>Can stop conversation tasks</li>
+        <li>Can copy any conversation content</li>
+        <li>Support proxy settings</li>
+        <li>Use the official GPT 3.5 Turbo model</li>
+      </ul>
+      <b>Changed</b>
+      <ul>
+        <li>UI redesign</li>
+      </ul>
+      <b>Removed</b>
+      <ul>
+        <li>Temporarily remove the embedded online ChatGPT</li>
+        <li>Remove Default mode from URL source</li>
+        <li>Remove Cloudflare mode URL source</li>
+      </ul><br>
+      <p>2.0.4-222.223</p>
+      <ul>
+        <li>Fix <a href="https://github.com/obiscr/ChatGPT/issues/65">#65</a></li>
+      </ul><br>
+      <p>2.0.3-222.223</p>
+      <ul>
+        <li>Fix language issues</li>
+      </ul><br>
+      <p>2.0.2-222.223</p>
+      <ul>
+        <li>中文文档迁移到（https://chatgpt.cn.obiscr.com）</li>
+        <li>英文文档迁移到（https://chatgpt.en.obiscr.com）</li>
+        <li>Fix <a href="https://github.com/obiscr/ChatGPT/issues/19">#19</a></li>
+        <li>Fix <a href="https://github.com/obiscr/ChatGPT/issues/46">#46</a></li>
+      </ul><br>
+      <p>2.0.1-222.223</p>
+      <ul>
+        <li>Enhance some features of Online ChatGPT.（增强在线ChatGPT功能）</li>
+        <li>Update the icons.（图标更新）</li>
+      </ul><br>
+      <p>2.0.0-222.223</p>
+      <ul>
+        <li>Added GPT 3 mode（新增GPT3模式）</li>
+        <li>Support right-click for quick search（支持右键进行快速搜索）</li>
+      </ul><br>
       <p>1.0.8-222.223</p>
       <ul>
         <li>Enhance the built-in browser feature of the plugin（增强插件内置浏览器功能）</li>
@@ -69,13 +116,24 @@
   <extensions defaultExtensionNs="com.intellij">
     <toolWindow id="ChatGPT" anchor="right" icon="/icons/toolWindow.svg" canCloseContents="true"
                 factoryClass="com.obiscr.chatgpt.MyToolWindowFactory"/>
-    <applicationConfigurable parentId="tools" instance="com.obiscr.chatgpt.settings.ChatGPTSettingsPanel"
-                             id="com.obiscr.chatgpt.settings.ChatGPTSettingsPanel"
+    <applicationConfigurable parentId="tools" instance="com.obiscr.chatgpt.settings.OpenAISettingsPanel"
+                             id="com.obiscr.chatgpt.settings.OpenAISettings"
+                             displayName="OpenAI"/>
+<!--    <groupConfigurable id="com.obiscr.chatgpt.settings.OpenAISettings" weight="-10"-->
+<!--                       displayNameKey="OpenAI"-->
+<!--                       descriptionKey="Here are the relevant settings for OpenAI"/>-->
+    <applicationConfigurable parentId="com.obiscr.chatgpt.settings.OpenAISettings" instance="com.obiscr.chatgpt.settings.ChatGPTSettingsPanel"
+                             id="com.obiscr.chatgpt.settings.ChatGPT"
                              displayName="ChatGPT"/>
-    <applicationService serviceImplementation="com.obiscr.chatgpt.settings.SettingsState"/>
-    <notificationGroup id="ChatGPT Notification Group"
-                       displayType="BALLOON"
-                       key="ChatGPT.Notification"/>
+    <applicationConfigurable parentId="com.obiscr.chatgpt.settings.OpenAISettings" instance="com.obiscr.chatgpt.settings.GPT3_35_TurboPanel"
+                             id="com.obiscr.chatgpt.settings.GPT3-3.5-Turbo"
+                             displayName="GPT 3.5 Turbo"/>
+    <applicationService serviceImplementation="com.obiscr.chatgpt.settings.OpenAISettingsState"/>
+    <applicationService serviceImplementation="com.obiscr.chatgpt.core.TokenManager"/>
+    <projectService serviceImplementation="com.obiscr.chatgpt.core.ConversationManager"/>
+    <projectService serviceImplementation="com.obiscr.chatgpt.core.SendAction"/>
+    <projectService serviceImplementation="com.obiscr.chatgpt.ChatGPTHandler"/>
+    <postStartupActivity implementation="com.obiscr.chatgpt.core.StartUpActivity"/>
   </extensions>
 
   <actions>
