Major update: UI redesign, Use the official GPT 3.5 Turbo model

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,12 @@ pluginGroup = com.obiscr.chatgpt
 pluginName = ChatGPT
 
 # SemVer format -> https://semver.org
-pluginVersion = 1.0.8-222.223
+pluginVersion = 2.1.1-202
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 222.2680.4
-pluginUntilBuild = 223.*
+pluginSinceBuild = 202.6397.94
+pluginUntilBuild = 202.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 # 'IC' - IntelliJ IDEA Community Edition.
@@ -21,8 +21,8 @@ pluginUntilBuild = 223.*
 # 'RD' - Rider.
 # 'GO' - GoLand.
 # 'JPS' - JPS-only.
-platformType = IU
-platformVersion = 2022.3
+platformType = IC
+platformVersion = 2020.2
 platformDownloadSources = true
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
