Support EAP Platform(231 ~ 231.*)

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,12 @@ pluginGroup = com.obiscr.chatgpt
 pluginName = ChatGPT
 
 # SemVer format -> https://semver.org
-pluginVersion = 2.1.1-222.223
+pluginVersion = 2.1.1-231.EAP
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 222.2680.4
-pluginUntilBuild = 223.*
+pluginSinceBuild = 231
+pluginUntilBuild = 231.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 # 'IC' - IntelliJ IDEA Community Edition.
