--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>ChatGPT</id>
   <name>ChatGPT</name>
-  <version>2.1.1-201</version>
+  <version>2.1.2-201</version>
   <vendor email="wuzi@obiscr.com" url="https://obiscr.com">obiscr</vendor>
 
   <description><![CDATA[
@@ -11,9 +11,14 @@
     ]]></description>
 
   <change-notes><![CDATA[
-      <p>2.1.1-201</p>
+      <p>2.1.2-201</p>
+      <b>Added</b>
       <ul>
-        <li>Fix some issues</li>
+        <li>Support custom display order of Content in tool windows</li>
+      </ul>
+      <b>Changed</b>
+      <ul>
+        <li>UI description information optimization</li>
       </ul><br>
       <p>2.1.0-201</p>
       <b>Added</b>
