--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -52,6 +52,7 @@ ui.setting.url.cloudflare.remark=Use the cloudflare service
 ui.setting.url.cloudflare.url.label=URL:
 ui.setting.url.cloudflare.url.empty_text=Set the Cloudflare Workers domain
 ui.setting.connection.title=Connection Settings
+ui.setting.setting.title=Public Settings
 ui.setting.connection.read_timeout.label=Read Timeout (ms):
 ui.setting.connection.read_timeout.remark=Time for reading data from the server
 ui.setting.connection.read_timeout.empty_text=10 seconds by default
