--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -64,6 +64,9 @@
     <applicationConfigurable parentId="com.obiscr.chatgpt.settings.OpenAISettings" instance="com.obiscr.chatgpt.settings.GPT3_35_TurboPanel"
                              id="com.obiscr.chatgpt.settings.GPT3-3.5-Turbo"
                              displayName="GPT 3.5 Turbo"/>
+    <applicationConfigurable parentId="com.obiscr.chatgpt.settings.OpenAISettings" instance="com.obiscr.chatgpt.settings.CustomActionsPanel"
+                             id="com.obiscr.chatgpt.settings.commandActions"
+                             displayName="Custom Actions"/>
     <applicationService serviceImplementation="com.obiscr.chatgpt.settings.OpenAISettingsState"/>
     <applicationService serviceImplementation="com.obiscr.chatgpt.core.TokenManager"/>
     <projectService serviceImplementation="com.obiscr.chatgpt.core.ConversationManager"/>
@@ -76,13 +79,18 @@
     <group id="ChatGPT" text="Search with ChatGPT" description="Search with ChatGPT">
       <action id="OptimizeAction" class="com.obiscr.chatgpt.ui.action.editor.OptimizeAction"
               icon="/icons/toolWindow.svg" />
-      <action id="TestAction" class="com.obiscr.chatgpt.ui.action.editor.TestAction"
+      <action id="TestAction" class="com.obiscr.chatgpt.ui.action.editor.TestCaseAction"
               icon="/icons/toolWindow.svg"/>
+      <action id="ExplainAction" icon="/icons/toolWindow.svg"
+              class="com.obiscr.chatgpt.ui.action.editor.ExplainAction"/>
+      <action id="WrongAction" icon="/icons/toolWindow.svg"
+              class="com.obiscr.chatgpt.ui.action.editor.BugAction"/>
+      <action id="CustomAction" icon="/icons/toolWindow.svg"
+              class="com.obiscr.chatgpt.ui.action.editor.CustomAction">
+        <keyboard-shortcut keymap="$default" first-keystroke="control shift Q"/>
+      </action>
+      <separator/>
       <add-to-group group-id="EditorPopupMenu" anchor="first"/>
-      <group id="ChatGPTGroup" icon="/icons/toolWindow.svg" text="More ChatGPT Actions..." popup="true">
-        <action id="ExplainAction" icon="/icons/toolWindow.svg" class="com.obiscr.chatgpt.ui.action.editor.ExplainAction"/>
-        <action id="WrongAction" icon="/icons/toolWindow.svg" class="com.obiscr.chatgpt.ui.action.editor.WrongAction"/>
-      </group>
       <separator/>
     </group>
   </actions>
