--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>ChatGPT</id>
   <name>ChatGPT</name>
-  <version>2.1.2-222.223</version>
+  <version>2.1.3-222.223</version>
   <vendor email="wuzi@obiscr.com" url="https://obiscr.com">obiscr</vendor>
 
   <description><![CDATA[
@@ -11,6 +11,10 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <p>2.1.3-222.223</p>
+      <ul>
+        <li>Support for adding custom prefixes</li>
+      </ul><br>
       <p>2.1.2-222.223</p>
       <b>Added</b>
       <ul>
