--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>ChatGPT</id>
   <name>ChatGPT</name>
-  <version>2.1.3-201</version>
+  <version>2.1.4-201</version>
   <vendor email="wuzi@obiscr.com" url="https://obiscr.com">obiscr</vendor>
 
   <description><![CDATA[
@@ -11,6 +11,15 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <p>2.1.4-201</p>
+      <ul>
+        <li>Support conversation model selection</li>
+        <li>Support GPT-3.5-Turbo context</li>
+        <li>Support system roles of GPT-3.5-Turbo</li>
+        <li>Support querying the usage limit of the account</li>
+        <li>Support for creating API Key</li>
+      </ul>
+      <p>For more details, please see <a href="https://chatgpt.en.obiscr.com/release/2.1.4">What's new in version 2.1.4</a></p><br>
       <p>2.1.3-201</p>
       <ul>
         <li>Support for adding custom prefixes</li>
