--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>ChatGPT</id>
   <name>ChatGPT</name>
-  <version>2.1.4-203.221</version>
+  <version>2.1.5-203.221</version>
   <vendor email="wuzi@obiscr.com" url="https://obiscr.com">obiscr</vendor>
 
   <description><![CDATA[
@@ -11,6 +11,13 @@
     ]]></description>
 
   <change-notes><![CDATA[
+      <p>2.1.5-203.221</p>
+      <ul>
+        <li>Fix <a href="https://github.com/dromara/ChatGPT/issues/94">#94</a></li>
+        <li>Support enable/disable avatar</li>
+        <li>Fix ChatGPT network error</li>
+      </ul>
+      <p>For more details, please see <a href="https://chatgpt.en.obiscr.com/release/2.1.5">What's new in version 2.1.5</a></p><br>
       <p>2.1.4-203.221</p>
       <ul>
         <li>Support conversation model selection</li>
