Fix some problems
Details:
Fix #107
Fix the problem of GPT 3.5 Turbo displaying blank
Fix the UI flicker problem.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -97,6 +97,7 @@
     <projectService serviceImplementation="com.obiscr.chatgpt.core.ConversationManager"/>
     <projectService serviceImplementation="com.obiscr.chatgpt.core.SendAction"/>
     <projectService serviceImplementation="com.obiscr.chatgpt.ChatGPTHandler"/>
+    <projectService serviceImplementation="com.obiscr.chatgpt.GPT35TurboHandler"/>
     <postStartupActivity implementation="com.obiscr.chatgpt.core.StartUpActivity"/>
   </extensions>
 
