Update the ChatGPT UI

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,3 +39,5 @@ gradleVersion = 7.6
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
+
+org.gradle.jvmargs = '-Dfile.encoding=UTF-8'
