Fix #139: Support the New UI icons

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -34,6 +34,7 @@
     <projectService serviceImplementation="com.obiscr.chatgpt.ChatGPTHandler"/>
     <projectService serviceImplementation="com.obiscr.chatgpt.GPT35TurboHandler"/>
     <postStartupActivity implementation="com.obiscr.chatgpt.core.StartUpActivity"/>
+    <iconMapper mappingFile="ChatGPTIconMappings.json"/>
   </extensions>
 
   <actions>
