--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -31,7 +31,7 @@ notify.unavailable.text=Temporarily unavailable, it is recommended to use the of
 
 ui.toolwindow.send=Send
 ui.setting.menu.text=ChatGPT
-ui.setting.url.title=URL Settings
+ui.setting.url.title=Server Settings
 ui.setting.url.default.label=Default
 ui.setting.url.default.remark=Temporarily unavailable, it is recommended to use the official source
 ui.setting.url.default.token.label=API Key:
