--- a/src/main/resources/messages/ChatGPTBundle.properties
+++ b/src/main/resources/messages/ChatGPTBundle.properties
@@ -11,7 +11,7 @@ action.code.optimize.menu=Optimize
 action.code.test.menu=Add Test Case
 action.code.wrong.menu=Find Bug
 action.code.explain.menu=Explain
-action.code.custom.action=Custom Actions
+action.code.custom.action=Custom Prompt
 
 toolwindows.content.search=Search
 toolwindows.content.online=Online ChatGPT
